Fix logo grid alignment

--- a/src/postcss/blocks/logo-grid.css
+++ b/src/postcss/blocks/logo-grid.css
@@ -1,7 +1,3 @@
-.logo-grid__title {
-  font-weight: var(--font-bold);
-}
-
 .logo-grid__description {
   margin-top: 1em;
 
@@ -137,20 +133,20 @@
   }
 }
 
-.logo-grid--header-left {
+.logo-grid.is-header-left {
   & .logo-grid__header {
     margin: 0 auto 1em 0;
     text-align: left;
   }
 }
 
-.logo-grid--header-center {
+.logo-grid.is-header-center {
   & .logo-grid__header {
     margin: 0 auto 1em;
   }
 }
 
-.logo-grid--header-right {
+.logo-grid.is-header-right {
   & .logo-grid__header {
     margin: 0 0 1em auto;
     text-align: right;
